[package]
name = "rastap"
version = "0.1.0"
authors = ["Victor R. Ruiz <vrruiz@gmail.com>"]
edition = "2018"
description = "Astrometric solver. ASTAP algorithm in Rust."
readme = "README.md"
repository = "https://github.com/vrruiz/rastap"
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
csv = ""
env_logger = ""
log = ""
structopt = ""
